--- a/references.bib
+++ b/references.bib
@@ -538,3 +538,22 @@
 	url = {https://docs.rs/futures/latest/futures/future/index.html},
 	urldate = {2022-03-30},
 }
+
+    
+@misc{ltd_raspberry_nodate,
+	title = {Raspberry {Pi} {Zero} 2 {W}},
+	url = {https://www.raspberrypi.com/products/raspberry-pi-zero-2-w/},
+	abstract = {Your tiny, tiny \$15 computer},
+	language = {en-GB},
+	urldate = {2022-04-04},
+	journal = {Raspberry Pi},
+	author = {Ltd, Raspberry Pi},
+}
+
+@misc{noauthor_join_nodate,
+	title = {join in futures::future - {Rust}},
+	url = {https://docs.rs/futures/latest/futures/future/fn.join.html},
+	urldate = {2022-04-04},
+	file = {join in futures\:\:future - Rust:/Users/neilweidinger/Zotero/storage/8LSYPSDN/fn.join.html:text/html},
+}
+
